  <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
      android:background="#ff07aaff">

<!--Aqui se declara el TextView para elegir opcion-->

    <TextView android:text="@string/hello_world"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:textColor="#f2090909"
        />

      <!--Aqui se declara un LinearLayout y
      dentro el TextView para etiqueta-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="100dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/senprox"
            android:textColor="#f2090909" />
    </LinearLayout>
      <!--Aqui se declara el boton para visualizar la vista
      del Sensor de Proximidad-->
    <Button
        android:layout_width="94dp"
        android:layout_height="90dp"
        android:id="@+id/btn1"
        android:onClick="b1"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="120dp"
        android:text="@string/senp"
        android:background="@drawable/proxy" />

      <!--Aqui se declara un LinearLayout dentro del cual
      contendra dos TextView para etiqueta-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="60dp">

       <TextView
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/sensac"
           android:layout_marginLeft="20dp"
           android:textColor="#f2090909" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sel"
            android:layout_marginLeft="115dp"
            android:textColor="#f2090909" />


    </LinearLayout>

      <!--Aqui se declara un LinearLayout y dentro dos botones
      para visualizar las vistas del Acelerometro y El Sensor de Luz-->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:layout_width="102dp"
        android:layout_height="116dp"
        android:id="@+id/btn2"
        android:onClick="b2"
        android:layout_marginTop="15dp"

        android:background="@drawable/acel"
        android:layout_marginLeft="15dp"/>


    <Button
        android:layout_width="114dp"
        android:layout_height="115dp"
        android:id="@+id/btn3"
        android:onClick="b3"
        android:layout_marginTop="15dp"

        android:layout_marginLeft="90dp"
        android:background="@drawable/senl" />

    </LinearLayout>

      <!--Aqui se declara un LinearLayout y dentro un boton para salir-->


        <!--Se declara el boton para salir de la aplicacion-->
        <Button
            android:layout_width="67dp"
            android:layout_height="65dp"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="60dp"
            android:onClick="salir"
            android:id="@+id/salir"
            android:background="@drawable/salir" />




</LinearLayout>
